--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,31 +7,47 @@ body{
     background-repeat: no-repeat;
     background-size: contain;
     background-position-x: center;
-    padding-top: 400px;
-    height: 600px;
+    padding-top: 300px;
+    height: 400px;
+    text-align: center;
 }
+
+.hero-section h1{
+    font-size: 3em;
+}
+
+
 .navbar h3{
     height: 100%;
 }
 
 .navbar a{
     font-size: 16px;
-    font-weight: ;
 }
 
-.hero-section h1{
-    font-size: 72px;
-}
+
 .trabajos{
     background-color: black;
 }
 
 .foot{
-    vertical-align: middle;
-    
+    vertical-align: middle;   
 }
 
 .foot a{
     text-decoration: none;
     color: #ffffff;
+}
+
+@media(min-width:430px){
+    .hero-section{
+        background-position-x: left;
+        
+        text-align: right;
+        height: 600px;
+    }
+
+    .hero-section h1{
+        font-size: 6em;
+    }
 }
