--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body{
     background-repeat: no-repeat;
     background-size: contain;
     background-position-x: center;
-    padding-top: 300px;
+    padding-top: 290px;
     height: 400px;
     text-align: center;
 }
@@ -16,7 +16,9 @@ body{
     font-size: 3em;
 }
 
-
+.titulo{
+    font-size: 3em;
+}
 .navbar h3{
     height: 100%;
 }
@@ -39,10 +41,10 @@ body{
     color: #ffffff;
 }
 
-@media(min-width:430px){
+@media(min-width:780px){
     .hero-section{
         background-position-x: left;
-        
+        padding-top: 150px;
         text-align: right;
         height: 600px;
     }
